# django-start-project

./: .gitignore  README.md  pyproject.toml
mysite/: .env  db.sqlite3
mysite/blog/: models.py
mysite/blog/migrations/: 0001_initial.py
mysite/blog/templates/blog/: base.html
mysite/mysite/: settings.py
