[tool.poetry]
name = "mysite"
version = "0.1.0"
description = ""
authors = ["MaksimPerepeliuk <maksim.perepelyuk@mail.ru>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^3.0.8"
pylint-django = "^2.0.15"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
